--- a/meu-projeto-react/package.json
+++ b/meu-projeto-react/package.json
@@ -6,13 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@mswjs/data": "^0.16.2",
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "msw": "^2.10.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -23,6 +32,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.1"
+    "jsdom": "^26.1.0",
+    "vite": "^6.3.1",
+    "vitest": "^3.2.4"
   }
 }
