--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mswjs/data": "^0.16.2",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
-    "msw": "^2.10.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
@@ -25,6 +24,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
+    "msw": "^2.10.3",
     "vite": "^6.3.1",
     "vitest": "^3.2.4"
   }
