--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "meu-projeto-react",
+  "name": "plataforma-analise-dados",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,34 +11,25 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@mswjs/data": "^0.16.2",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "lucide-react": "^0.526.0",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.10",
-    "react-bootstrap-icons": "^1.11.6",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
     "jsdom": "^26.1.0",
-    "msw": "^2.10.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.3.1",
     "vitest": "^3.2.4"
   }
